# apex-risk-trade-tool

./: .editorconfig  .env.example  .gitignore  AGENTS.md  ApeX Omni API and Python SDK.txt  MVP_without_TV_Design_Doc.txt  README.md  apex-stability-spec.md  apex_api_cheatsheet.md  hyperliquid-integration-spec.md  hyperliquid-order-disambiguation-spec.md  klines_api.txt  order-classification-refactor-spec.md  pyproject.toml  requirements.txt  tick_size_plan.md
backend/: main.py
backend/api/: errors.py  routes_market.py  routes_orders.py  routes_positions.py  routes_risk.py  routes_stream.py  routes_trade.py  routes_venue.py
backend/core/: config.py  logging.py  ui_mock.py
backend/exchange/: apex_client.py  exchange_gateway.py  hyperliquid_gateway.py  venue_controller.py
backend/market/: __init__.py  depth_summary.py
backend/risk/: atr.py  risk_engine.py
backend/tests/: test_apex_client.py  test_exchange_gateway.py  test_order_manager.py  test_orders_api.py  test_risk_engine.py  test_trade_api.py
backend/trading/: order_classification.py  order_manager.py  schemas.py
docs/decisions/: 0001-venue-toggle-semantics.md  0003-hyperliquid-price-size-validity.md  0004-hyperliquid-auth-agent-wallet.md  0006-hyperliquid-tp-sl-model.md  0007-streaming-and-fallback-strategy.md  README.md
spec/: API_CONTRACT.md  ARCHITECTURE.md  ui-whale-mock.json
specs/001-api-consistency-audit/: data-model.md  plan.md  quickstart.md  research.md  (+2 more)
tools/: curl_runner.py  fetch_trades.py  inspect_apex.py
ui/: index.html
zAPI Docs/: ws_orders_raw.json
zAPI_docs/: klines_api.txt
(+78 files in other folders)
